# akvan-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  bootstrap-install.sh  config.yaml.example  install.sh  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  cli.py  config.py  event_log.py  events.py  limits.py  logging_config.py  logging_setup.py  messages.py  session.py  vault.py
agent/context/: __init__.py  budget.py  compression.py  config.py  result_storage.py  tool_search.py
agent/gateway/: __init__.py  approval_flow.py  bindings.py  chat_session.py  command.py  config.py  contracts.py  daemon.py  delivery.py  registry.py  runner.py  service.py  state.py  stream_consumer.py  types.py
agent/gateway/integrations/: __init__.py
agent/knowledge/: __init__.py  config.py  models.py  paths.py  review.py  store.py
agent/learning/: background_review.py
agent/memory/: __init__.py  background_review.py  config.py  paths.py  store.py
agent/policy/: __init__.py  file_safety.py
agent/prompts/: __init__.py  builder.py  discovery.py  models.py
agent/providers/: __init__.py  akvan.py  base.py  deepseek.py  openai_codex.py  openrouter.py
agent/session/: __init__.py  persistence.py  prompt.py  session.py  tooling.py
agent/skills/: __init__.py  config.py  curator.py  learn_prompt.py  manage.py  models.py  paths.py  provenance.py  registry.py  sync.py  tools.py  usage.py
agent/storage/: __init__.py  permissions.py  store.py
agent/tools/: __init__.py  approval.py  banner_generation.py  base.py  browser.py  file_tools.py  knowledge_tools.py  memory_tools.py  presentation.py  process_manager.py  registry.py  session_search_tools.py  skill_manage_tools.py  terminal_tools.py  vision_tools.py  x_account.py
agent/ui/: __init__.py  app.py  chat.py  commands.py  completers.py  gateway_setup.py  logs.py  rendering.py  setup.py  steps.py  telegram_setup.py  tools_setup.py  uninstall.py
agent/vision/: __init__.py  attach.py  aux.py  capabilities.py  encode.py  user_images.py
tests/: test_agent.py  test_agent_approval.py  test_config.py  test_limits.py  test_logging_setup.py  test_session.py  test_session_gateway.py  test_session_memory.py  test_storage.py  test_vault.py
tests/context/: test_budget.py  test_compression.py  test_result_storage.py  test_tool_search.py
tests/gateway/: test_architecture.py  test_bindings.py  test_config.py  test_daemon.py  test_gateway_setup.py  test_service_auth.py  test_session_reset.py  test_stop_rollback.py  test_stream_consumer.py  test_stream_consumer_draft.py  test_telegram_adapter.py  test_telegram_adapter_streaming.py  test_telegram_rich.py
tests/knowledge/: test_store.py  test_tools_and_review.py
tests/learning/: test_combined_review.py
tests/memory/: test_background_review.py  test_store.py
tests/policy/: test_file_safety.py
tests/prompts/: __init__.py  test_builder.py
tests/providers/: test_akvan.py  test_deepseek.py  test_openai_codex.py  test_openai_codex_vision.py  test_openrouter.py  test_provider_lifecycle.py
tests/skills/: __init__.py  test_curator.py  test_learn_prompt.py  test_manage.py  test_registry.py  test_sync.py  test_usage.py
tests/storage/: test_fts.py  test_permissions.py
tests/tools/: __init__.py  test_approval.py  test_banner_generation.py  test_browser_tools.py  test_coding_tools.py  test_presentation.py  test_telegram_delivery.py  test_telegram_delivery_config.py
tests/ui/: __init__.py  test_cli.py  test_commands.py  test_completers.py  test_logs.py  test_model_setup.py  test_persisted_turn.py  test_resume_commands.py  test_steps.py  test_telegram_setup.py  test_tools_setup.py  test_uninstall.py
tests/vision/: test_agent_vision.py  test_tools_and_telegram.py  test_vision.py
(+124 files in other folders)
