[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akvan-agent"
version = "0.1.0"
description = "A Python harness agent with a scalable provider interface."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "arash-dn", email = "d1arashd1arash@gmail.com" },
]
keywords = [
  "ai",
  "agent",
  "cli",
  "chat",
  "llm",
  "openrouter",
  "deepseek",
  "openai",
  "codex",
  "terminal",
  "coding",
  "assistant",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "rich>=13.7.0",
  "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
telegram = [
  "python-telegram-bot>=22.6",
]
web = [
  "firecrawl-py>=4.17.0",
  "ddgs>=9.0.0",
]
dev = [
  "pytest>=8.0.0",
  "python-telegram-bot>=22.6",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "python-telegram-bot>=22.6",
]

[project.urls]
Homepage = "https://github.com/arash-dn/akvan-agent"
Repository = "https://github.com/arash-dn/akvan-agent"
Issues = "https://github.com/arash-dn/akvan-agent/issues"
Documentation = "https://github.com/arash-dn/akvan-agent/blob/master/README.md"

[project.scripts]
akvan = "agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
