[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akvan-agent"
version = "0.2.0"
description = "An agent harness with multi-provider support."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "arash-dn", email = "agent@akvan.app" },
]
keywords = [
  "ai",
  "agent",
  "cli",
  "chat",
  "llm",
  "openrouter",
  "deepseek",
  "openai",
  "codex",
  "terminal",
  "coding",
  "assistant",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
  "httpx[socks]>=0.27.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "rich>=13.7.0",
  "prompt-toolkit>=3.0.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
telegram = [
  "python-telegram-bot>=22.6",
]
web = [
  "ddgs>=9.0.0",
]
browser = [
  "playwright>=1.52.0",
]
dev = [
  "pytest>=8.0.0",
  "python-telegram-bot>=22.6",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "python-telegram-bot>=22.6",
]

[project.urls]
Homepage = "https://github.com/akvanai/akvan-agent"
Repository = "https://github.com/akvanai/akvan-agent"
Issues = "https://github.com/akvanai/akvan-agent/issues"
Documentation = "https://github.com/akvanai/akvan-agent/blob/main/README.md"

[project.scripts]
akvan = "agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
